k8s/api/goerli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wenmerge-api-goerli
  namespace: wenmerge

spec:
  selector:
    matchLabels:
      app: wenmerge-api-goerli
  replicas: 1
  template:
    metadata:
      #annotations:
      #  sidecar.istio.io/inject: "false"
      labels:
        app: wenmerge-api-goerli
    spec:
      containers:
      - name: backend
        image: rootwarp/wenmerge-api:v0.1.0
        ports:
        - containerPort: 9090
