k8s/api/goerli/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-wenmerge-goerli
  namespace: wenmerge

spec:
  hosts:
  - "api-wenmerge-goerli.dsrvlabs.dev"
  gateways:
  - gw-wenmerge
  http:
  - route:
    - destination:
        host: svc-wenmerge-api-goerli.wenmerge.svc.cluster.local
      weight: 100
